- updated: `debug.js` now reads directories according to the config (author: @luoage)
- updated: config parser supports `config` sub-type
- updated: `controller.$exec()` --> `callback` is by default `controller.callback()`
- updated: `F.localize()` has enabled `compression` by default
- updated: HTTP server is listening after the framework is completely loaded

- fixed: `JSON` type in Total.js schemas
- fixed: responding on `range` header
- fixed: (IMPORTANT) `U.ls2()`
- fixed: `F.rmdir` removes all files and directories
- fixed: Date formatting with `a` value
- fixed: `F.path.mkdir()` in Windows (author: @molda)
- fixed: `F.restore()` in Windows (author: @molda)
- fixed: `MODEL()`, `MODULE()`, `INCLUDE()` now are direct aliases
- fixed: unit testing (author: @ckpiggy)
- fixed: a check for maximum length of request data
- fixed: `ArrayBuffer` in webosocket
- fixed: (IMPORTANT) `DatabaseBuilder.in()`
- fixed: NoSQL multiple updates
- fixed: NoSQL sorting of boolean values in larger dataset

======= 2.8.0

- added: `NOSQL().restore()` restores a database (its package)
- added: Mail options support a new property `xoauth2` (it needs to contain a `BASE64` value) for sending emails via OAuth 2.0 tokens (more in docs)
- added: `F.path.mkdir(path)` creates all directories according to the path
- added: `MailMessage.send2([callback])` sends a message according to the framework configuration
- added: a new filter for NoSQL embedded `DatabaseBuilder.contains(name)`
- added: a new filter for NoSQL embedded `DatabaseBuilder.empty(name)`
- added: (IMPORTANT) NoSQL counter supports daily stats (NoSQL counter files will be upgraded automatically and backwards incompatible)
- added: (IMPORTANT) NoSQL database and counter can read data from URL
- added: NoSQL counter `db.counter.daily_sum([id], callback)` for reading stats
- added: NoSQL counter `db.counter.daily_max([id], callback)` for reading stats
- added: NoSQL counter `db.counter.daily_min([id], callback)` for reading stats